--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sqlite3": "^5.1.6",
     "uuid": "^9.0.0",
     "pg": "^8.11.0",
+    "socket.io": "^4.9.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
